<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey">

    <android.support.v7.widget.Toolbar
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"/>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
            android:id="@+id/cv_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/black"
            app:cardElevation="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tv_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Atlanta, US"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal">

                        <TextView
                                android:id="@+id/tv_degree"
                                tools:text="20"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorAccent"
                                android:textSize="32sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="3dp"
                                android:text="@string/xb0"
                                android:textColor="@color/colorWhite"
                                android:textSize="32sp"
                                android:textStyle="bold"/>

                        <TextView
                                android:id="@+id/tv_current_unit"
                                android:text="@string/c"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorWhite"
                                android:textSize="32sp"
                                android:textStyle="bold"/>

                        <ImageView
                                android:layout_gravity="center"
                                android:visibility="gone"
                                android:layout_marginStart="8dp"
                                android:id="@+id/iv_weather"
                                android:layout_width="30dp"
                                android:layout_height="30dp"/>

                    </LinearLayout>

                    <TextView
                            android:id="@+id/tv_current_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            tools:text="Clouds"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp"/>

                </LinearLayout>


                <View android:layout_width="match_parent"
                      android:layout_height="0.5dp"
                      android:layout_marginBottom="16dp"
                      android:layout_marginTop="16dp"
                      android:background="@color/colorWhiteLight"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forecast"
                        android:layout_marginBottom="16dp"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"/>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAllCaps="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="14sp"/>
                    <TextView
                            android:id="@+id/tv_humidity"
                            android:layout_marginStart="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp"/>

                </LinearLayout>


                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textAllCaps="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="14sp"/>
                    <TextView
                            android:id="@+id/tv_pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp"/>
                </LinearLayout>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temperature"
                            android:textAllCaps="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="14sp"/>
                    <TextView
                            android:id="@+id/tv_temperature"
                            android:layout_marginStart="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp"/>

                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/min_temperature"
                            android:textAllCaps="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="14sp"/>
                    <TextView
                            android:id="@+id/tv_min_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp"/>
                </LinearLayout>


                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/max_temperature"
                            android:textAllCaps="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="14sp"/>
                    <TextView
                            android:id="@+id/tv_max_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp"/>
                </LinearLayout>


                <View android:layout_width="match_parent"
                      android:layout_height="0.5dp"
                      android:layout_marginBottom="16dp"
                      android:layout_marginTop="16dp"
                      android:background="@color/colorWhiteLight"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"/>


                <LinearLayout
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_speed"
                            android:textAllCaps="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="14sp"/>
                    <TextView
                            android:id="@+id/tv_wind_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp"/>
                </LinearLayout>


                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_deg"
                            android:textAllCaps="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="14sp"/>

                    <TextView
                            android:id="@+id/tv_wind_deg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp"/>
                </LinearLayout>

                <View android:layout_width="match_parent"
                      android:layout_height="0.5dp"
                      android:layout_marginBottom="16dp"
                      android:layout_marginTop="16dp"
                      android:background="@color/colorWhiteLight"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clouds"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"/>

                <LinearLayout
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clouds_percentage"
                            android:textAllCaps="true"
                            android:textColor="@color/dark_grey"
                            android:textSize="14sp"/>
                    <TextView
                            android:id="@+id/tv_clouds_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp"/>
                </LinearLayout>

                <TextView
                        android:background="@color/colorAccent"
                        android:id="@+id/tv_refresh"
                        android:padding="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:drawableEnd="@drawable/ic_refresh_black_24dp"
                        android:drawablePadding="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/refresh"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"/>


            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>